...
                android:layout_marginTop="20dp"
                android:text="@string/ac_username_title"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="50dp" />

            <EditText
                android:id="@+id/acUNInput"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:hint="@string/ac_username_placeholder"
                android:inputType="text"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="79dp" />
...
                android:layout_marginTop="20dp"
                android:text="@string/ac_password_title"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="136dp" />

            <EditText
                android:id="@+id/acPassInput"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:hint="@string/ac_password_placeholder"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="165dp" />
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/ac_security_question_text" />

            <Spinner
                android:id="@+id/acSQs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/ac_security_question_entries" />

            <EditText
                android:id="@+id/acSQAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ac_security_question_placeholder"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="text"
...
                android:layout_marginTop="20dp"
                android:text="@string/ac_gamification_title"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="136dp" />

            <Spinner
                android:id="@+id/acGameSett"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/ac_gamification_entries"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="202dp" />

...
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="exportSet"
                    android:text="@string/ac_export_option1" />

                <RadioButton
                    android:id="@+id/acExportSettTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="exportSet"
                    android:text="@string/ac_export_option2" />

...
                android:scrollHorizontally="false"
                android:text="@string/ac_notification_setting"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="388dp" />

            <Button
                android:id="@+id/acCreateButt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:onClick="createAccount"
                android:text="@string/ac_create_butt" />

...
