...
        app:layout_constraintBottom_toTopOf="@+id/loginSettingsButt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/loginSplash"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="splashClick"
            android:text="@string/l_log_butt"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/loginUnameBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
...
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/loginPassBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
...
            android:id="@+id/loginRegisterText"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/l_register_text"
            app:layout_constraintBottom_toTopOf="@+id/loginRegisterButt"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/loginRecoverText"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/l_recover_text"
            android:textAlignment="viewEnd"
            app:layout_constraintBottom_toTopOf="@+id/loginRecoverButt"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/loginButt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:onClick="loginClick"
...
